
Legend:
+ New
* Changed
! Fixed


next version - not released yet
===============================
* If MPC-HC is configured to override the splitter choice when doing the initial track selection,
  tracks selected at splitter level will be preferred in case more than one tracks match the criteria
! Properties dialog: Some tracks could have been missing from the streams list
! Fix incorrectly displayed OSD in case the message contained the character '&'
! Ticket #2773, Subtitle renderer: Fix possible artifacts when using karaoke effects
! Ticket #4011, Fix image saving for streams with characters not supported in path names


1.7.3 - 02 February 2014
========================
+ New Galician and Vietnamese translations
+ Ticket #3873, Display tooltip with H/W decoder name on hover over status message
* Updated Armenian, Basque, British English, Simplified Chinese, French, German, Japanese, Malay,
  Polish, Portuguese (Brazil), Romanian, Slovak, Spanish, Swedish, Turkish and Ukrainian translations
! Some subtitle entries could have been missing depending on how they overlapped in time
! Ticket #2870, Fix rare visual glitches on status bar
! Ticket #3881, DXVA status was invalid with certain decoders
! Ticket #3981, Subtitle renderer: the blur filter was sometimes wrong on some part of the subpicture
! Ticket #3988, DVD favorites: the position in the DVD was not restored. Additionally if "Remember DVD position"
  is enabled and a DVD favorite has a position, the position from the favorite will be used instead of the
  remembered position. Also fix loading of DVD favorites created with no position.
! Ticket #3998, The "Debug Shaders" dialog icon was missing when a translation was used


1.7.2 - 26 January 2014
=======================
+ Added support for XySubFilter, only compatible with embedded subtitles for now
+ New option to auto-hide docked panels together with toolbars
+ Support pixel shader presets (with shortcuts and command line options)